--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@ This website Beta777.com is owned and operated by GIT Operations. registration n
 			  success: function (msg) {
 				$("#errorMsg").html('Username and password is incorrect.');
 				if (msg = "sucessmsg") {
-				  window.location.href = "https://55exch.com";
+				  window.location.href = "https://www.55exch.com";
 				}
 			  }
 			})
@@ -1686,7 +1686,7 @@ This website Beta777.com is owned and operated by GIT Operations. registration n
 			  success: function (msg) {
 				$("#errorMsg").html('Username and password is incorrect.');
 				if (msg = "sucessmsg") {
-				  window.location.href = "https://55exch.com";
+				  window.location.href = "https://www.55exch.com";
 				}
 			  }
 			})
